--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -1,7 +1,9 @@
 .chat-main{
   float: left;
-  width: calc(100% - 300px);
+  width: calc(100% - 300px);          
 }
+
+$color: #38aef0;
 
 .main-header{
   height: 100px;
@@ -24,12 +26,12 @@
     }
   }
   &__edit-btn{
-    color: #38aef0;
+    color: $color;
     height: 40px;
     line-height: 40px;
     padding: 0 20px;
     margin-top: 30px;
-    border: solid 1px #38aef0;
+    border: solid 1px $color;
     position: absolute;
     right: 40px;
   }
@@ -61,20 +63,14 @@
         border-style: none;
       }
       &__image{
-        font-size: 1.3rem;
+        font-size: 21px;
         position: absolute;
         top: 10px;
         right: 10px;
         cursor: pointer;
         &__file{
-          width: 0;
+          display: none;
         }        
-          & a{
-            display: inline-block;
-            font-size: inherit;
-            text-rendering: auto;
-            -webkit-font-smoothing: antialiased;
-          }
       }
     }
     }
@@ -83,7 +79,7 @@
     height: 50px;
     padding: 0 30px;
     margin-left: 15px;
-    background-color: #38aef0;
+    background-color: $color;
     color: white;
     cursor: pointer;
 }
