--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -5,12 +5,12 @@
    %ul.side-header__box__menu 
     %li.side-header__box__new-group
      =link_to '#' do
-      = icon('fa', 'edit')
+      = icon('fa', 'edit',class: "icon-appearance")
     %li.side-header__box__edit-user
      =link_to '#' do
-      = icon('fa', 'cog')
+      = icon('fa', 'cog' ,class: "icon-appearance")
  .groups
-  =link_to '#' do
+  =link_to '#', class: "test-appearance" do
    .group
     %p.group__group-name テスト
     %p.group__latest-message まだメッセージがありません
