--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -1,9 +1,9 @@
+@import "color";
+
 .chat-main{
   float: left;
   width: calc(100% - 300px);          
 }
-
-$color-lightblue: #38aef0;
 
 .main-header{
   height: 100px;
@@ -26,12 +26,12 @@ $color-lightblue: #38aef0;
     }
   }
   &__edit-btn{
-    color: $color-lightblue;
+    color: $lightblue;
     height: 40px;
     line-height: 40px;
     padding: 0 20px;
     margin-top: 30px;
-    border: solid 1px $color-lightblue;
+    border: solid 1px $lightblue;
     position: absolute;
     right: 40px;
   }
@@ -79,8 +79,8 @@ $color-lightblue: #38aef0;
     height: 50px;
     padding: 0 30px;
     margin-left: 15px;
-    background-color: $color-lightblue;
-    color: white;
+    background-color: $lightblue;
+    color: $white;
     cursor: pointer;
 }
 }
