--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -1,12 +1,12 @@
-$color-white:white;
+@import "color";
 
 .chat-side{
   width: 300px;
   background-color: #2f3e51;
   float:left;
-  color: $color-white;
+  color: $white;
   .icon-appearance{
-    color: $color-white;
+    color: $white;
   }
    .side-header{
      background-color: #253141;
@@ -42,7 +42,7 @@ $color-white:white;
   padding: 20px 20px 0;
   overflow: scroll;
   .test-appearance{
-    color: $color-white;
+    color: $white;
     text-decoration: none;
   }
    .group{
