--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,10 +1,11 @@
 .chat-side
  .side-header
   .side-header__box
-   %p.side-header__box__user-name daiki
+   %p.side-header__box__user-name
+    = current_user.name 
    %ul.side-header__box__menu 
     %li.side-header__box__new-group
-     =link_to '#' do
+     =link_to edit_user_path(current_user) do
       = icon('fa', 'edit',class: "icon-appearance")
     %li.side-header__box__edit-user
      =link_to '#' do
